# clickjacking-poc-generator

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  clickjacking_poc_generator.py  example_urls.txt  init_repo.sh  pyproject.toml
.github/workflows/: ci.yml
clickjacking_poc_generator/: __init__.py  cli.py
